src/assets/themes/default-template.css
/* ... */
/* Browser */

#browser-pane {
  box-sizing: border-box;
  position: relative;
  width: 100%;
  height: 100%;
}

#browser-frame {
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - var(--toolbar-width));
  height: 100%;
  border-top: 1px solid var(--border-color);
  border-right: 1px solid var(--border-color);
  border-bottom: 1px solid var(--border-color);
}

#browser {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  height: 100%;
  left: 50%;
  top: 50%;
  transform: translate(-50%,-50%);
  background-color: var(--system-gray7);
}

/* Dialog */

.dialog ::placeholder {
  color: var(--system-gray1);
}

body.dark .dialog ::placeholder {
  color: var(--system-gray2);
}

.dialog .tabs-panel {
  padding: 0.5em 1em;
}

.dialog.ui-dialog {
  z-index: 3000 !important;
}

.dialog.ui-dialog.ui-widget.ui-widget-content {
  cursor: move;
  backdrop-filter: var(--tool-backdrop-filter);
  background-color: var(--tool-background-color);
  border-radius: var(--tool-border-radius);
  border: var(--tool-border);
  box-shadow: var(--tool-shadow);
}

/* Scene Properties */

.scene-properties .tabs-panel {
  overflow-y: auto;
}

/* Library */

.ui-widget .library-input {
  box-sizing: border-box;
  display: block;
  background: none;
  border: none;
  width: 100%;
  font-family: var(--sans-serif);
  font-weight: lighter;
  font-size: var(--large-font-size);
  padding-bottom: 10px;
}

.ui-widget .library-buttons {
  border-top: var(--tool-border);
  border-bottom: var(--tool-border);
  padding: 5px 0;
  text-align: center;
}

.ui-widget .library-button {
  cursor: pointer;
  margin-right: 1em;
}

.ui-widget .library-button:hover {
  color: var(--highlight-color);
}

.ui-widget .library-button.active {
  color: var(--accent-color);
}

.ui-widget .library-output {
  user-select: none;
  position: absolute;
  overflow: scroll;
  margin: 10px 0;
  inset: 75px 1em 0 1em;
}

.ui-widget .library-list {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.ui-widget .library-list .component {
  margin: 1em 0;
  font-size: var(--small-font-size);
  border-bottom: 1px solid var(--system-gray1);
  color: var(--system-gray1);
}

body.dark .ui-widget .library-list .component {
  border-bottom: 1px solid var(--system-gray2);
  color: var(--system-gray2);
}

.ui-widget .library-list .node {
  cursor: pointer;
  padding: 0.4em 0;
}

.ui-widget .library-list li:first-child {
  margin-top: 0;
}

.ui-widget .library-list .node:hover {
  background-color: rgba(0, 0, 0, 0.2)
}

.ui-widget .library-list .icon {
  padding-left: calc(27px + 0.5em);
  background: no-repeat;
}

.ui-widget .library-list .hidden {
  display: none;
}

/* Node List */

.node-list {
  overflow: scroll;
  position: absolute;
  inset: 0 0 0 0;
  padding: 0;
}

.node-list > ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.node-list > ul > li {
  cursor: pointer;
  user-select: none;
  margin: 0;
  padding: 3px 10px;
  white-space: nowrap;
}

.node-list > ul > li:nth-child(odd) {
  background-color: var(--tint-color1);
}

.node-list > ul > li:hover {
  background-color: var(--tint-color2);
}

.node-list .icon {
  position: relative;
  margin-right: 2px;
  top: 2px;
}

/* Footer */

#footer {
  position: absolute;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
}

/* Console */

.console {
  --min-input-height: 20px;
  --max-input-height: calc(var(--min-input-height) * 4);
}

.console {
  box-sizing: border-box;
}

.console-left {
  position: absolute;
  box-sizing: border-box;
  left: 0;
  right: var(--toolbar-width);
  height: 100%;
}

.console-output {
  position: absolute;
  box-sizing: border-box;
  overflow-y: scroll;
  top: 0;
  border-right: 1px solid var(--border-color);
  border-bottom: 1px solid var(--border-color);
  padding: 5px;
  width: 100%;
  height: calc(100% - var(--min-input-height));
  background: var(--system-gray7);
  font-family: var(--monospace);
  font-size: 8pt;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.console-output p {
  margin: 0;
}

.console-output p.splitter {
  margin-top: 5px;
  border-top: 1px solid var(--system-gray3);
  margin-bottom: 5px;
}

.console-output p.debug {
  color: inherit;
}

.console-output p.log {
  color: var(--system-blue);
}

.console-output p.info {
  color: var(--system-blue);
}

.console-output p.warn {
  color: var(--system-yellow);
}

.console-output p.error {
  color: var(--system-red);
}

.console-output p.filled {
  position: relative;
  z-index: 0;
  margin-top: 5px;
  margin-bottom: 5px;
  color: black;
}

.console-output p.filled:before {
  content: "";
  position: absolute;
  display: block;
  z-index: -1;
  width: 100%;
  height: 100%;
  filter: brightness(2) opacity(60%);
}

.console-output p.warn.filled {
  border-top: 1px solid var(--system-yellow);
  border-bottom: 1px solid var(--system-yellow);
}

.console-output p.warn.filled:before {
  background-color: var(--system-yellow);
}

.console-output p.error.filled {
  border-top: 1px solid var(--system-red);
  border-bottom: 1px solid var(--system-red);
}

.console-output p.error.filled:before {
  background-color: var(--system-red);
}

.console-input {
  position: absolute;
  box-sizing: border-box;
  bottom: 0;
  width: 100%;
  min-height: var(--min-input-height);
  max-height: var(--max-input-height);
}

/* textarea cannot have a ::before */
.console-input::before {
  display: block;
  position: absolute;
  box-sizing: border-box;
  left: 5px;
  top: 3px;
  content: "❯";
  color: var(--accent-color);
}

.console-input > textarea {
  display: block;
  position: absolute;
  box-sizing: border-box;
  outline: 0;
  border: 0;
  padding-top: 3px;
  padding-left: 17px;
  width: 100%;
  height: 100%;
  background-color: transparent;
  color: var(--text-color);
  resize: none;
}

/* Script Editor */

.script-editor {
  --input-height: 20px;

  box-sizing: border-box;
}
/* ... */

